add custom messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,11 +54,12 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  encoders.msg
+  motors.msg
+  motors_cmd.msg
+)
 
 ## Generate services in the 'srv' folder
 add_service_files(
@@ -114,7 +115,7 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES goal_strategy
+  #LIBRARIES goal_strategy
   CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs
   #DEPENDS system_lib
 )
