add mouillages (2020 etape)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,7 +152,7 @@ src/goal/coupe2019.cpp
 src/Krabi/stm32/src/angle.cpp  src/Krabi/stm32/src/distance.cpp  src/Krabi/stm32/src/position.cpp  src/Krabi/stm32/src/positionPlusAngle.cpp  src/Krabi/stm32/src/vec2d.cpp  src/Krabi/stm32/src/vec3d.cpp
 src/Krabi/stm32/src/strategie/abeille.cpp      src/Krabi/stm32/src/strategie/dijkstra.cpp   src/Krabi/stm32/src/strategie/strategiev3.cpp
 src/Krabi/stm32/src/strategie/accelerator.cpp  src/Krabi/stm32/src/strategie/etape.cpp      src/Krabi/stm32/src/strategie/mediumLevelAction.cpp
-src/Krabi/stm32/src/strategie/actionGoTo.cpp   src/Krabi/stm32/src/strategie/goldenium.cpp  src/Krabi/stm32/src/strategie/reservoirEau.cpp src/Krabi/stm32/src/strategie/port.cpp src/Krabi/stm32/src/strategie/phare.cpp src/Krabi/stm32/src/strategie/mancheAAir.cpp
+src/Krabi/stm32/src/strategie/actionGoTo.cpp   src/Krabi/stm32/src/strategie/goldenium.cpp  src/Krabi/stm32/src/strategie/reservoirEau.cpp src/Krabi/stm32/src/strategie/port.cpp src/Krabi/stm32/src/strategie/phare.cpp src/Krabi/stm32/src/strategie/mancheAAir.cpp src/Krabi/stm32/src/strategie/mouillageNord.cpp src/Krabi/stm32/src/strategie/mouillageSud.cpp
 )
 
 ## Rename C++ executable without prefix
