now use krabi_msgs instead of the messages in goal_strategy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,9 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
-  message_generation
+  #message_generation
   geometry_msgs
+  krabi_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -54,22 +55,22 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  encoders.msg
-  motors.msg
-  motors_cmd.msg
-  servos_cmd.msg
-  odom_light.msg
-)
+#add_message_files(
+#  FILES
+#  encoders.msg
+#  motors.msg
+#  motors_cmd.msg
+#  servos_cmd.msg
+#  odom_light.msg
+#)
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  FILES
-  UpdateStrat.srv
-#   Service1.srv
-#   Service2.srv
-)
+#add_service_files(
+#  FILES
+#  UpdateStrat.srv
+##   Service1.srv
+##   Service2.srv
+#)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -79,12 +80,12 @@ add_service_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  std_msgs
-  geometry_msgs
-  #UpdateStrat
-)
+#generate_messages(
+#  DEPENDENCIES
+#  std_msgs
+#  geometry_msgs
+#  #UpdateStrat
+#)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -118,7 +119,7 @@ generate_messages(
 catkin_package(
   INCLUDE_DIRS include
   #LIBRARIES goal_strategy
-  CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs
+  CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs krabi_msgs
   #DEPENDS system_lib
 )
 
