--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,8 @@
   <depend>rospy</depend>
   <depend>tf</depend>
   <depend>Eigen</depend>
+  <depend>eigen_conversions</depend>
+  <depend>tf_conversions</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>krabi_msgs</depend>
