--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,7 @@ catkin_package(
 include_directories(include ${catkin_INCLUDE_DIRS})
 include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR})
 
-
-add_executable(${PROJECT_NAME}_node src/goal/main.cpp src/goal/coupe2021.cpp)
+add_executable(${PROJECT_NAME}_node src/goal/main.cpp src/goal/coupe2021.cpp src/goal/grabber.cpp)
 
 file(GLOB_RECURSE krabilib_SRC "src/krabilib/*.cpp")
 
