--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <build_depend>krabi_msgs</build_depend>
+  <build_depend>tf2_eigen</build_depend>
 
   <build_export_depend>rclcpp</build_export_depend>
   <build_export_depend>rclpy</build_export_depend>
@@ -25,6 +26,7 @@
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>visualization_msgs</build_export_depend>
   <build_export_depend>krabi_msgs</build_export_depend>
+  <build_export_depend>tf2_eigen</build_export_depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>rclcpp</exec_depend>
@@ -34,6 +36,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>visualization_msgs</exec_depend>
   <exec_depend>krabi_msgs</exec_depend>
+  <exec_depend>tf2_eigen</exec_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
   <test_depend>ament_lint_auto</test_depend>
