--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>visualization_msgs</build_depend>
   <build_depend>krabi_msgs</build_depend>
   <build_depend>tf2_eigen</build_depend>
+  <build_depend>tf2_ros</build_depend>
 
   <build_export_depend>rclcpp</build_export_depend>
   <build_export_depend>rclpy</build_export_depend>
@@ -27,6 +28,7 @@
   <build_export_depend>visualization_msgs</build_export_depend>
   <build_export_depend>krabi_msgs</build_export_depend>
   <build_export_depend>tf2_eigen</build_export_depend>
+  <build_export_depend>tf2_ros</build_export_depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>rclcpp</exec_depend>
@@ -37,6 +39,7 @@
   <exec_depend>visualization_msgs</exec_depend>
   <exec_depend>krabi_msgs</exec_depend>
   <exec_depend>tf2_eigen</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
   <test_depend>ament_lint_auto</test_depend>
